データ拡張の設定, learning rateの設定

--- a/notebook/learning_efdet.ipynb
+++ b/notebook/learning_efdet.ipynb
@@ -49,14 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Using apex: True\n"
+     "name": "stdout",
+     "text": "Using apex: False\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'effdet'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-18df63530a5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Using apex:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhas_apex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0meffdet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_efficientdet_config\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEfficientDet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDetBenchTrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCOCOEvaluator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munwrap_bench\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0meffdet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mefficientdet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHeadNet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtransforms\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mefdetTF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'effdet'"
      ]
     }
    ],
@@ -140,6 +151,7 @@
     }
    ],
    "source": [
+    "#dataset_train = CocoDetection('../../ballod_dataset/', \"./annotations/train_ball_coco.json\")\n",
     "dataset_train = CocoDetection(\"./\", \"./train_cocoAno.json\")"
    ]
   },
@@ -412,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 300\n",
+    "epochs = 50\n",
     "warmup_epochs = 5\n",
     "cooldown_epochs = 10\n",
     "num_epochs = epochs\n",
@@ -3785,9 +3797,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pytorch_p36]",
+   "display_name": "Python 3.6.9 64-bit ('mlops-image-e1': venv)",
    "language": "python",
-   "name": "conda-env-pytorch_p36-py"
+   "name": "python_defaultSpec_1600837787072"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3799,7 +3811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
